--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
-    <!--<script th:src="@{~/js/search.js}" type="application/javascript" defer="true"></script>-->
+    <!--<script th:src="@{~/js/script.js}" type="application/javascript" defer="true"></script>-->
 
 </head>
 
@@ -67,16 +67,14 @@
             </div>
         </nav>
 
-        <div class="item col-xs-6 col-lg-8">
-            <div id="products" class="row list-group">
-                <div class="item col-xs-3 col-lg-3">
-                    <div class="thumbnail" id="pic">
-                        <img class="group list-group-image" src="#" alt="" />
-                    </div>
-
-                </div>
-            </div>
-        </div>
+        <!--<div class="item col-xs-6 col-lg-8">-->
+            <!--<div id="products" class="row list-group">-->
+                <!--<div class="item col-xs-3 col-lg-3">-->
+                    <!--<div class="thumbnail" id="pic">-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
     </div>
 
