--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head>
+<head th:fragment="header">
     <meta charset="utf-8" />
     <meta name="author" content="Codecool" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,45 +27,47 @@
 
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
-    <!--<script th:src="@{~/js/script.js}" type="application/javascript" defer="true"></script>-->
+    <script th:src="@{~/js/script.js}" type="application/javascript" defer="true"></script>
 
 </head>
 
 <body>
     <div class="container">
-        <div class="jumbotron">
-            <h1>FilmClub</h1>
-        </div>
-
-        <nav class="navbar navbar-default" id="navbar">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" id="filmclub" href="#">Film Club</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                    <form class="navbar-form navbar-left" id="search" th:action="@{/search}">
-                        <div class="form-group">
-                            <input type="text" class="form-control" name="title" placeholder="Search in titles" />
-                        </div>
-                        <button type="submit" class="btn btn-default" id="searchbtn">Submit</button>
-                    </form>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-                    </ul>
-                </div>
+        <div th:fragment="navbar">
+            <div class="jumbotron">
+                <h1>FilmClub</h1>
             </div>
-        </nav>
+
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" id="filmclub" href="#">Film Club</a>
+                    </div>
+                    <div class="collapse navbar-collapse">
+                        <ul class="nav navbar-nav">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        <form class="navbar-form navbar-left" id="search" th:action="@{/search}">
+                            <div class="form-group">
+                                <input type="text" class="form-control" name="title" placeholder="Search in titles" />
+                            </div>
+                            <button type="submit" class="btn btn-default" id="searchbtn">Submit</button>
+                        </form>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
 
         <!--<div class="item col-xs-6 col-lg-8">-->
             <!--<div id="products" class="row list-group">-->
