detailed page styling

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
           type="image/png"
           href="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/movie.png" />
 
-    <link rel="stylesheet" type="text/css" href="css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="../css/custom.css" />
 
     <script th:src="@{~/js/script.js}" type="application/javascript" defer="true"></script>
 
@@ -68,15 +68,6 @@
                 </div>
             </nav>
         </div>
-
-        <!--<div class="item col-xs-6 col-lg-8">-->
-            <!--<div id="products" class="row list-group">-->
-                <!--<div class="item col-xs-3 col-lg-3">-->
-                    <!--<div class="thumbnail" id="pic">-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
 
     </div>
 
