--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -1,16 +1,29 @@
-/*body {*/
-    /*background: no-repeat, fixed, center, url("https://www-tc.pbs.org/wgbh/nova/next/wp-content/uploads/2017/06/quantum-entanglement_2048x1152.jpg");*/
-/*}*/
-
 #poster, #missing-poster{
-    height: 230px;
+    height: 215px;
 }
 
-.jumbotron {
-    margin-bottom: 15px;
+.jumbotron, .navbar, #search-results {
+    margin: 15px;
 }
 
-#actors {
-    float: right;
-    display: inline-flex;
+.container {
+    background-color: #b99359;
+    /*background-color: #0a0515;*/
 }
+
+h2 {
+    color: yellowgreen;
+}
+
+#movide-desc {
+    box-shadow: 0 0 1px black;
+    padding: 20px;
+    background-color: #eeeeef;
+}
+
+#movie-details {
+    box-shadow: 0 0 1px black;
+    padding: 20px;
+}
+
+
