--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -12,18 +12,28 @@
 }
 
 h2 {
-    color: yellowgreen;
+    color: #000000;
 }
 
-#movide-desc {
+#movide-desc, #movie-details {
     box-shadow: 0 0 1px black;
-    padding: 20px;
+    padding: 30px;
     background-color: #eeeeef;
+    border-radius: 6px;
+    margin-bottom: 20px;
 }
 
-#movie-details {
-    box-shadow: 0 0 1px black;
-    padding: 20px;
+#detail-poster {
+    box-shadow: 8px 8px 10px 1px black;
 }
+
+#title-rating {
+    display: inline-flex;
+}
+
+#rating {
+    float: right;
+}
+
 
 
